Adds all examples